--- a/web/index.html
+++ b/web/index.html
@@ -6,11 +6,47 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Cinema</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     </head>
     <body>
-        <div>TODO write content</div>
+        <form action="findActor">
+            <div class="container">
+                <div class="row">
+                    <div class="jumbotron text-center"><h2>Cinema - Search</h2></div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-2">
+                        <label for="title">Title</label>
+                    </div>
+                    <div class="col-sm-2">
+                        <input name="title">
+                    </div>
+                    <div class="col-sm-2">
+                        <input class="btn btn-default" align="center" type="submit" name="search" value="Search">
+                    </div>
+                </div>
+            </div>
+        </form>
+        
+        <br>
+        
+        <form action="findCategory">
+            <div class="container">                
+                <div class="row">
+                    <div class="col-sm-2">
+                        <label for="category">Category</label>
+                    </div>
+                    <div class="col-sm-2">
+                        <input name="category">
+                    </div>
+                    <div class="col-sm-4">
+                        <input class="btn btn-default" align="center" type="submit" name="search" value="Search">
+                    </div>
+                </div>
+            </div>
+        </form>
     </body>
 </html>
