--- a/web/index.html
+++ b/web/index.html
@@ -19,10 +19,10 @@ and open the template in the editor.
                 </div>
                 <div class="row">
                     <div class="col-sm-2">
-                        <label for="title">Title</label>
+                        <label for="actor">Actor</label>
                     </div>
                     <div class="col-sm-2">
-                        <input name="title">
+                        <input name="actor">
                     </div>
                     <div class="col-sm-2">
                         <input class="btn btn-default" align="center" type="submit" name="search" value="Search">
